--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,3 @@
-[submodule "src/dynamic_bitset"]
-	path = src/dynamic_bitset
-	url = https://github.com/pinam45/dynamic_bitset
-[submodule "src/intx"]
-	path = src/intx
-	url = https://github.com/chfast/intx
+[submodule "src/gcem"]
+	path = src/gcem
+	url = https://github.com/kthohr/gcem
